fix error message & input gaps

--- a/blocks/popup/__edit-input-error/popup__edit-input-error.css
+++ b/blocks/popup/__edit-input-error/popup__edit-input-error.css
@@ -1,12 +1,9 @@
 .popup__edit-input-error {
-  margin-top: 30px;
+  margin-top: 5px;
   min-height: 12px;
   min-width: 160px;
-  margin-bottom: 30px;
-  align-self: flex-start;
-  height: 40px;
   font-size: 12px;
   line-height: 15px;
   font-weight: 400;
-
+  display: block;
 }
